full-moon/tests/cases/fail/parser/repeat-until-2/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/repeat-until-2
---
error[ast]: unexpected token ``.  (expected `until` after block)
  ┌─ source.lua:2:8
  │
2 │     call()
  │           ^


